--- a/src/app/pages/services/services-list/services-list.component.html
+++ b/src/app/pages/services/services-list/services-list.component.html
@@ -1,23 +1,35 @@
-<div class="container px-2">
-  <div class="flex flex-col mt-8">
-    <div class="md:ml-8">
-      <p class="text-2xl md:text-3xl italic font-semibold tracking-wide">
-        SERVICIOS
+<div>
+  <mat-toolbar style="background: rgb(212, 212, 212)">
+    <div class="mt-4">
+      <p
+        class="text-1xl md:text-1xl italic font-semibold tracking-wide align-middle"
+      >
+        CREAR SERVICIOS
       </p>
     </div>
+  </mat-toolbar>
+</div>
+<div class="container px-2">
+  <div class="flex flex-col mt-8">
     <div class="py-2 -my-2 overflow-x-auto sm:-mx-6 sm:px-6 lg:-mx-8 lg:px-8">
-      <div>
-        <button
-          mat-raised-button
-          color="primary"
-          [routerLink]="['/createService']"
-        >
-          <mat-icon color="accent">add</mat-icon><span>Crear un servicio</span>
-        </button>
-      </div>
       <div
         class="inline-block min-w-full overflow-hidden align-middle border-b border-gray-200 shadow sm:rounded-lg"
       >
+        <mat-toolbar  style="font-size: 12px;background: rgb(230, 230, 230)">
+          <mat-form-field class="" appearance="outline">
+            <mat-label>Buscar servicio</mat-label>
+            <input matInput/>
+          </mat-form-field>
+
+          <button
+            mat-raised-button
+            color="primary"
+            [routerLink]="['/createService']"
+          >
+            <mat-icon color="accent">add</mat-icon
+            ><span>Crear un servicio</span>
+          </button>
+        </mat-toolbar>
         <table class="min-w-full">
           <thead>
             <tr>
