--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,3 +1,6 @@
+<mat-toolbar style="background-color: white;">
+  <p>JUSTRAVEL LOGO</p>
+</mat-toolbar>
 <!-- <mat-nav-list>
     <a mat-list-item routerLink="."><mat-icon color="accent">analytics</mat-icon><span>Ventas</span></a>
   </mat-nav-list>
