--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary" class="toolbar">
-  <button mat-icon-button color="accent" (click)="onToggleSidenav()">
+    <button mat-icon-button color="accent" (click)="onToggleSidenav()">
     <mat-icon>menu</mat-icon>
   </button>
-  <div class="ml-8">
-    <h1 color="accent">JUSTRAVEL</h1>
-  </div>
+    <div class="ml-8">
+        <!-- <h1 color="accent">JUSTRAVEL</h1> -->
+    </div>
 </mat-toolbar>
