--- a/src/app/pages/services/create-service/create-service.component.html
+++ b/src/app/pages/services/create-service/create-service.component.html
@@ -1,72 +1,141 @@
-<div class="container px-2">
-  <div class="w-full h-28 p-8 ml-14">
-    <span class="font-semibold text-2xl">Crear servicios</span>
+<div>
+  <mat-toolbar style="background: rgb(212, 212, 212)">
+    <div class="mt-4">
+      <p
+        class="text-1xl md:text-1xl italic font-semibold tracking-wide align-middle"
+      >
+        Crear servicios
+      </p>
+    </div>
+  </mat-toolbar>
+</div>
+
+<div class="ml-10 mt-6 mb-6">
+  <p class="text-2xl md:text-2xl font-bold tracking-wide">
+    ¿Qué servicio quieres crear ?
+  </p>
+</div>
+
+<mat-stepper #stepper>
+  <mat-step>
+  <!-- <mat-step [stepControl]="firstFormGroup" errorMessage="Name is required."> -->
+    <form>
+    <!-- <form [formGroup]="firstFormGroup"> -->
+      <ng-template matStepLabel>Selecciona un servicio</ng-template>
+<div class="flex flex-row">
+  <div class="grid grid-rows-3 grid-flow-col gap-8 ml-12">
+    <div>
+      <button mat-fab color="primary">
+        <img
+          class="w-28 ml-4"
+          src="../../assets/images/imgServices/icon-food-red.png"
+        />
+      </button>
+      <p class="text-center font-bold text-lg">Comida</p>
+    </div>
+    <div>
+      <button mat-fab color="primary">
+        <img
+          class="w-28 ml-4"
+          src="../../assets/images/imgServices/icon-food-red-premium.png"
+        />
+      </button>
+      <p class="text-center font-bold text-lg">Comida Premium</p>
+    </div>
+    <div>
+      <button mat-fab color="primary">
+        <img
+          class="w-28 ml-4"
+          src="../../assets/images/imgServices/ico-food-kids.png"
+        />
+      </button>
+      <p class="text-center font-bold text-lg">Comida Niños</p>
+    </div>
   </div>
-  <div class="ml-20 mt-6">
-    <p class="text-2xl md:text-2xl font-bold tracking-wide">
-      ¿Qué servicio quieres crear ?
-    </p>
+  <div class="grid grid-rows-3 grid-flow-col gap-8 ml-12">
+    <div>
+      <button mat-fab color="primary">
+        <img
+          class="w-28 ml-4"
+          src="../../assets/images/imgServices/ico-drink.png"
+        />
+      </button>
+      <p class="text-center font-bold text-lg">Bebida</p>
+    </div>
+    <div>
+      <button mat-fab color="primary">
+        <img
+          class="w-28 ml-4"
+          src="../../assets/images/imgServices/ico-drink-premium.png"
+        />
+      </button>
+      <p class="text-center font-bold text-lg">Bebida Premium</p>
+    </div>
+    <div></div>
   </div>
-  <div class="flex flex-row">
-    <div class="grid grid-rows-3 grid-flow-col gap-8 ml-12">
-      <div>
-        <button mat-fab color="primary">
-          <img class="w-28 ml-4" src="../../assets/images/imgServices/icon-food-red.png">
-        </button>
-        <p class="text-center font-bold text-lg">Comida</p>
-      </div>
-      <div>
-        <button mat-fab color="primary">
-          <img class="w-28 ml-4" src="../../assets/images/imgServices/icon-food-red-premium.png">
-        </button>
-        <p class="text-center font-bold text-lg">Comida Premium</p>
-      </div>
-      <div>
-        <button mat-fab color="primary">
-          <img class="w-28 ml-4" src="../../assets/images/imgServices/ico-food-kids.png">
-        </button>
-        <p class="text-center font-bold text-lg">Comida Niños</p>
-      </div>
+  <div class="grid grid-rows-3 grid-flow-col gap-8 ml-12">
+    <div>
+      <button mat-fab color="primary">
+        <img
+          class="w-28 ml-4"
+          src="../../assets/images/imgServices/ico-coffe.png"
+        />
+      </button>
+      <p class="text-center font-bold text-lg">Desayuno</p>
     </div>
-    <div class="grid grid-rows-3 grid-flow-col gap-8 ml-12">
-      <div>
-        <button mat-fab color="primary">
-          <img class="w-28 ml-4" src="../../assets/images/imgServices/ico-drink.png">
-        </button>
-        <p class="text-center font-bold text-lg">Bebida</p>
-      </div>
-      <div>
-        <button mat-fab color="primary">
-          <img class="w-28 ml-4" src="../../assets/images/imgServices/ico-drink-premium.png">
-        </button>
-        <p class="text-center font-bold text-lg">Bebida Premium</p>
-      </div>
-      <div></div>
+    <div></div>
+    <div></div>
+  </div>
+  <div class="grid grid-rows-3 grid-flow-col gap-8 ml-12">
+    <div>
+      <button mat-fab color="primary">
+        <img
+          class="w-28 ml-4"
+          src="../../assets/images/imgServices/ico-kayak.png"
+        />
+      </button>
+      <p class="text-center font-bold text-lg">Actividad</p>
     </div>
-    <div class="grid grid-rows-3 grid-flow-col gap-8 ml-12">
-      <div>
-        <button mat-fab color="primary">
-          <img class="w-28 ml-4" src="../../assets/images/imgServices/ico-coffe.png">
-        </button>
-        <p class="text-center font-bold text-lg">Desayuno</p>
-      </div>
-      <div></div>
-      <div></div>
-    </div>
-    <div class="grid grid-rows-3 grid-flow-col gap-8 ml-12">
-      <div>
-        <button mat-fab color="primary">
-          <img class="w-28 ml-4" src="../../assets/images/imgServices/ico-kayak.png">
-        </button>
-        <p class="text-center font-bold text-lg">Actividad</p>
-      </div>
-      <div>
-        <button mat-fab color="primary">
-          <img class="w-28 ml-4" src="../../assets/images/imgServices/ico-kayak-kids.png">
-        </button>
-        <p class="text-center font-bold text-lg">Actividad Niños</p>
-      </div>
+    <div>
+      <button mat-fab color="primary">
+        <img
+          class="w-28 ml-4"
+          src="../../assets/images/imgServices/ico-kayak-kids.png"
+        />
+      </button>
+      <p class="text-center font-bold text-lg">Actividad Niños</p>
     </div>
   </div>
 </div>
-
+      <div>
+        <p>Go to a different step to see the error state</p>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step errorMessage="Address is required.">
+  <!-- <mat-step [stepControl]="secondFormGroup" errorMessage="Address is required."> -->
+    <form>
+    <!-- <form [formGroup]="secondFormGroup"> -->
+      <ng-template matStepLabel>Especificaciones</ng-template>
+      <mat-form-field appearance="fill">
+        <mat-label>Address</mat-label>
+        <input matInput placeholder="Ex. 1 Main St, New York, NY" formControlName="secondCtrl"
+               required>
+      </mat-form-field>
+      <div>
+        <p>Go to a different step to see the error state</p>
+        <button mat-button matStepperPrevious>Back</button>
+        <button mat-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Crear servicio</ng-template>
+    <p>You are now done.</p>
+    <div>
+      <button mat-button matStepperPrevious>Back</button>
+      <button mat-button (click)="stepper.reset()">Reset</button>
+    </div>
+  </mat-step>
+</mat-stepper>
