--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     <a mat-list-item routerLink="."><mat-icon color="accent">book_online</mat-icon><span>Pases</span></a>
   </mat-nav-list> -->
 <mat-nav-list>
-    <a mat-list-item routerLink="/createEstablishment" routerLinkActive="active">
+    <a mat-list-item routerLink="/establishmentList" routerLinkActive="active">
         <mat-icon color="accent">store</mat-icon><span>Establecimientos</span></a>
 </mat-nav-list>
 <mat-nav-list>
